--- a/indexDadi.html
+++ b/indexDadi.html
@@ -2,9 +2,19 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/styleDadi.css">
         <title></title>
     </head>
     <body>
-        <script src="js/main2.js" charset="utf-8"></script>
+        <div class="container">
+            <div class="card">
+                <div class="box">
+                    <div id="rd-1"class="random-1"></div>
+                    <div id="rd-2"class="random-2"></div>
+                </div>
+            <div id="result"></div>
+            </div>
+        </div>
+        <script src="js/mainDadi.js" charset="utf-8"></script>
     </body>
 </html>
